--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>前航 - 前端导航网站</title>
+    <title>网址导航</title>
     <link rel="stylesheet" href="style.css" />
     <style type="text/css">
       .icon {
@@ -39,7 +39,7 @@
         </li>
       </ul>
     </main>
-    <script src="//at.alicdn.com/t/font_1783500_nhxksfna3h8.js"></script>
+    <script src="//at.alicdn.com/t/font_1783500_ijf4mmz0u9n.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.5.0/jquery.min.js"></script>
     <script src="main.js"></script>
   </body>
